--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 html, body {
   font-family: 'Arial';
+  height: 100%;
+  margin: 0;
 }
 
 #main {
   background-color: #d6f9ff;
   /* margin: auto; */
-  width: 100%;
-  height: 100%;
+  min-height: 100%;
 }
