--- a/style.css
+++ b/style.css
@@ -6,5 +6,17 @@ html, body {
 
 #main {
   min-height: 100%;
-  margin: 20px;
+  margin: 40px;
+}
+
+a:link {
+  color: #1217ab;
+}
+
+a:hover {
+  color: #3a3fcf;
+}
+
+a:active {
+  color: #0c6959;
 }
