--- a/style.css
+++ b/style.css
@@ -11,12 +11,15 @@ html, body {
 
 a:link {
   color: #141cf4;
+  text-decoration: underline;
 }
 
 a:hover {
   color: #3a63f9;
+  text-decoration: none;
 }
 
 a:active {
   color: #8121e7;
+  text-decoration: none;
 }
