Update font stack

--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 html, body {
-  font-family: "Fira Sans", "Helvetica", "sans-serif";
-  font-weight: 300;
+  font-family: "Fira Sans", Helvetica, sans-serif;
   margin-top: 20px;
 }
 
