--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 html, body {
   font-family: "Fira Sans", Helvetica, sans-serif;
-  margin-top: auto;
+  /* margin-top: auto; */
 }
 
 .header {
-  padding: 60px;
+  padding: 30px;
   text-align: center;
   color: white;
   font-size: 30px;
