--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 html, body {
   font-family: "Fira Sans", Helvetica, sans-serif;
-  /* margin-top: auto; */
+  margin-top: 0;
 }
 
 .header {
   padding: 15px;
   text-align: center;
   color: white;
+  width: 100%;
   font-size: 24px;
   font-weight: 400;
   background: rgb(61, 126, 187);
