--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 html, body {
   font-family: "Fira Sans", Helvetica, sans-serif;
-  margin-top: 0;
+}
+
+body {
+  margin: 0;
 }
 
 .header {
   padding: 20px;
-  margin: 0;
   text-align: center;
   color: white;
   width: 100%;
