--- a/style.css
+++ b/style.css
@@ -76,8 +76,8 @@ a {
   }
   a:link {color: #3f9be6;}
   a:hover {color: #5fb1f4;}
-  a:visited {color: #a663f7;}
-  a:active {color: #6b71e6;}
+  a:visited {color: #b377fc;}
+  a:active {color: #757bf3;}
   .header {
     background: #21598d;
     color: #ffffff;  
