--- a/style.css
+++ b/style.css
@@ -36,13 +36,9 @@ body {
   margin: auto;
 }
 
-h2 {
-  font-weight: 500;
-}
+h2 {font-weight: 500;}
 
-p {
-  font-weight: 300;
-}
+p {font-weight: 300;}
 
 a {
   font-weight: 400;
