--- a/style.css
+++ b/style.css
@@ -50,6 +50,12 @@ a {
   font-weight: 300;
 }
 
+pre {
+  max-width: 600px;
+  padding-top: 30px;
+  margin: auto;
+}
+
 .input {
   border-radius: 4px;
   cursor: text;
@@ -83,6 +89,11 @@ a {
     color: #ffffff;  
   }
 
+  pre {
+    background-color: #c3cedb;
+    border-radius: 3px;
+  }
+
   .button {
     background-color: #e2e9f1;
     border: 2px solid #83b6f1;
@@ -114,6 +125,11 @@ a {
   .header {
     background: #21598d;
     color: #ffffff;  
+  }
+
+  pre {
+    background-color: #1f2a39;
+    border-radius: 3px;
   }
 
   .button {
