--- a/style.css
+++ b/style.css
@@ -64,6 +64,13 @@ code {
   font-size: 14px;
 }
 
+.h-comment  { color: #4e606d; }
+.h-keyword  { color: #abb437; }
+.h-operator { color: #79acc0; }
+.h-function { color: #d9d42e; }
+.h-number   { color: #bd9656; }
+.h-string   { color: #cc90ea; }
+
 .input {
   border-radius: 4px;
   cursor: text;
@@ -87,10 +94,10 @@ code {
     color: #000000;
   }
 
-  a:link { color: #1579cb; }
-  a:hover { color: #3595e3; }
+  a:link    { color: #1579cb; }
+  a:hover   { color: #3595e3; }
   a:visited { color: #7e32da; }
-  a:active { color: #3b42ca; }
+  a:active  { color: #3b42ca; }
 
   .header {
     background: #3d7ebb;
@@ -124,10 +131,10 @@ code {
     color: #ffffff;
   }
 
-  a:link { color: #3f9be6; }
-  a:hover { color: #5fb1f4; }
+  a:link    { color: #3f9be6; }
+  a:hover   { color: #5fb1f4; }
   a:visited { color: #b377fc; }
-  a:active { color: #757bf3; }
+  a:active  { color: #757bf3; }
 
   .header {
     background: #21598d;
