Highlight parentheses like operators

--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ code {
 
 .h-comment  { color: #4e606d; }
 .h-keyword  { color: #abb437; }
-.h-operator { color: #79acc0; }
+.h-operator { color: #93c0d1; }
 .h-function { color: #d9d42e; }
 .h-number   { color: #bd9656; }
 .h-string   { color: #cc90ea; }
