Add even more code

--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ code {
 
   .h-comment  { color: #787b8099; }
   .h-keyword  { color: #db6d1d; }
-  .h-class    { color: #73d0ff; }
+  .h-class    { color: #4fb8ed; }
   .h-operator { color: #b3704f; }
   .h-function { color: #c49606; }
   .h-number   { color: #996fc3; }
