--- a/flicker/flicker.css
+++ b/flicker/flicker.css
@@ -1,3 +1,5 @@
+@import "/iosevka-webfont/iosevka-ss17.css";
+
 @media (prefers-color-scheme: light) {
   :root {
     --title: #475f7a;
@@ -88,6 +90,22 @@ h2 {
   color: var(--header);
   font-family: "Rokkitt";
   font-weight: 500;
+}
+
+.method > dt {
+  margin-bottom: 6px;
+  color: #cbdde4;
+  font: 300 17px "Iosevka SS17 Web";
+}
+
+.method > dd {
+  margin-left: 12px;
+  font-weight: 300;
+}
+
+dd > code {
+  color: #abcdef;
+  font: 400 16px "Iosevka SS17 Web";
 }
 
 nav {
